--- a/ProyectoI/t/registro_login/templates/registro_login/index.html
+++ b/ProyectoI/t/registro_login/templates/registro_login/index.html
@@ -22,7 +22,7 @@
 
         <div class="button">
             <div class="cta">
-                <a href="{% url 'login' %}"><button class="btn primary">Ofrecer Servicios</button></a>
+                <a href="{% url 'tutorial' %}"><button class="btn primary">Ofrecer Servicios</button></a>
                 <a href="{% url 'servicios:ver_servicios' %}"><button class="btn secondary">Contratar Servicios</button></a>
                 
             </div>
