--- a/ProyectoI/t/registro_login/templates/registro_login/registro.html
+++ b/ProyectoI/t/registro_login/templates/registro_login/registro.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="{% url 'index' %}">
+            <a href="{% url 'tutorial' %}">
                 <button class="volver">Volver</button>
             </a>
         </nav>
